# can-gateway-uds

./: .gitignore  .mxproject  BOARD_B.ioc  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  interface_change.md
.github/workflows/: firmware-ci.yml
Core/Inc/: stm32f4xx_it.h
Core/Src/: can.c  freertos.c  gpio.c  main.c
MyApp/: adc_driver.h  ap.c  ap.h  can_driver.c  can_driver.h  cli_cmd.c  cli_cmd.h  engine_can.h  engine_sim.c  engine_sim.h  uart.c  uart.h
app/: gateway_tasks.c
board_a_engine/: README.md
board_b_gateway/: README.md
board_c_uds/: README.md
common/: can_bsp.c  can_bsp.h  protocol_ids.h  signal_db.h
common/can_bsp/: can_bsp.c  can_bsp.h
common/can_db/: can_db.h
common/common_types/: common_types.h
docs/: architecture.md  can_db.md  interface_spec.md  signal_db.txt  team_lead_day1.md  uds_did_map.md
firmware/board_a_engine/: .mxproject  (+3 more)
firmware/board_a_engine/GUI/engine_sim/: .gitignore  CMakeLists.txt  README.md  engine_sim.pro  mainwindow.cpp  mainwindow.h  serialconnection.cpp  serialconnection.h
firmware/board_c_uds/: CMakeLists copy.txt  CMakeLists.txt  README_AUTO_FLOW_CONTROL.txt  board_c_uds.ioc  stm32f429zi_cli.ioc  stm32f429zi_uds.ioc
firmware/board_c_uds/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
firmware/board_c_uds/Core/Src/: can.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c  usart.c  usb_otg.c
firmware/board_c_uds/EWARM/: Project.eww  stm32f429zi_uds.ewd  stm32f429zi_uds.ewp
firmware/board_c_uds/UDSAPP/: ap_main.c  ap_main.h  can_bsp.c  can_bsp.h  cli.c  cli.h  hw_def.h  protocol_ids.h  uart.c  uart.h  uds_server.c  uds_server.h  uds_service.c  uds_service.h
firmware/board_c_uds/board_c_uds/: ap_main.c  app_main.c  app_main.h  cli_cmd.c  cli_cmd.h  uds_client.c  uds_client.h
firmware/board_c_uds/cmake/stm32cubemx/: CMakeLists.txt
firmware/board_c_uds/common/: can_bsp.c  can_bsp.h  protocol_ids.h  uds_defs.h
firmware/board_c_uds/src/: ap_main.c  ap_main.h  hw_def.h  uds_cli_cmd.c  uds_cli_cmd.h  uds_server.c  uds_server.h  uds_service.c  uds_service.h
tools/: uds_cli_test.md
(+87 files in other folders)
